# qotd

./: CMakeLists.txt  README.md  config.h  main.c  quote.c  quote.h  server.c  server.h
.github/workflows/: cmake.yml
client/: client.c  client.h  main.c
server/: main.c  quote.c  quote.h  server.c  server.h
